feat:api inquiry balance
